--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/raw": "^2.5.1",
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "next": "^14.2.4",
