--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
+    "lodash": "^4.17.21",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
